--- a/components/MovieCard/index.module.css
+++ b/components/MovieCard/index.module.css
@@ -1,23 +1,18 @@
 .root {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 800px;
 }
 
 .imageWrapper {
-    flex: 1;
-    max-width: 200px;
-    margin-right: 20px;
+  width: 45%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 20px;
 }
 
 .content {
-    flex: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  width: 55%;
 }
